--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p>Image 1</p>
         </div>
         <div class="contents-item">
-          <img src="images/Madu2.png">
+          <img src="Madu2.png">
           <p>Image 2</p>
         </div>
         <div class="contents-item">
