--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="copy-container">
         <h1>Yasmina Honey<span>.</span></h1>
         <h2>Sweet & Nutritious Honey</h2>
-        <img src="images/Yasmina Honey.png" alt="Yasmina Honey">
+        <img src="Yasmina Honey.png" alt="Yasmina Honey">
       </div>
       
       <div class="about">
@@ -37,7 +37,7 @@
       <div class="contents">
         <h3><a id="work-link">Proyek Madu</a></h3>
         <div class="contents-item">
-          <img src="images/Madu1.png">
+          <img src="Madu1.png">
           <p>Image 1</p>
         </div>
         <div class="contents-item">
@@ -45,19 +45,19 @@
           <p>Image 2</p>
         </div>
         <div class="contents-item">
-          <img src="images/Madu3.png">
+          <img src="Madu3.png">
           <p>Image 3</p>
         </div>
         <div class="contents-item">
-          <img src="images/Madu4.png">
+          <img src="Madu4.png">
           <p>Image 4</p>
         </div>
         <div class="contents-item">
-          <img src="images/Madu5.png">
+          <img src="Madu5.png">
           <p>Image 5</p>
         </div>
         <div class="contents-item">
-          <img src="images/Madu6.png">
+          <img src="Madu6.png">
           <p>Image 6</p>
         </div>
 
